--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,12 @@
 {
     "name": "oxd-drupal8/gluu_sso",
     "type": "drupal-module",
-    "description": "This module will enable you to authenticate users against any standard OpenID Connect Provider.",
-    "license": "GPL-2.0+",
-    "keywords": ["Drupal"],
-    "homepage": "https://github.com/sumiodz/sumiti-drupal-module",
-    "authors": [
-        {
-            "name": "sumiodz",
-            "email": "sumiti@ourdesignz.com",
-            "homepage": "https://ox.gluu.org/"
-        }
-    ],
-    "autoload": {
-        "psr-4": {"Drupal\\gluu_sso\\Controller\\": "src/"}
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Drupal\\gluu_sso\\Tests\\": "tests"
-        }
-    },
     "require": {
-        "php": "^5.5 || ^7.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.*",
-        "codeclimate/php-test-reporter": "dev-master"
+      "autoload": {
+          "psr-4": {"Drupal\\gluu_sso\\Controller\\": "src/"}
+      }
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "2.0.x-dev"
-        }
-    },
-    "scripts": {
-        "test": "php vendor/bin/phpunit",
-        "test-coverage": "php vendor/bin/phpunit --coverage-html coverage"
+        "installer-name": "gluu_sso"
     }
 }
