--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,14 @@
-
 {
     "name": "oxd-drupal8/gluu_sso",
-    "description": "Mobile_Detect is a lightweight PHP class for detecting mobile devices.",
     "type": "drupal-module",
-    "homepage": "https://drupal.org/project/mobile_detect",
-    "authors": [
-        {
-            "name": "Matthew Donadio (mpdonadio)",
-            "homepage": "https://www.drupal.org/u/mpdonadio",
-            "role": "Maintainer"
-        },
-        {
-            "name": "Darryl Norris (darol100)",
-            "email": "admin@darrylnorris.com",
-            "homepage": "https://www.drupal.org/u/darol100",
-            "role": "Co-maintainer"
-        }
-    ],
-    "support": {
-        "issues": "https://drupal.org/project/issues/mobile_detect",
-        "irc": "irc://irc.freenode.org/drupal-contribute",
-        "source": "https://cgit.drupalcode.org/mobile_detect"
-    },
-    "license": "GPL-2.0+",
-    "minimum-stability": "dev",
     "require": {
-        "mobiledetect/mobiledetectlib": "~2.8"
+      "autoload": {
+          "psr-4": {
+              "gluu_sso": "src/"
+          }
+      }
+    },
+    "extra": {
+        "installer-name": "gluu_sso"
     }
 }
